# map-tiles-downloader

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  map-tile-downloader  map-tiles-downloader.spec  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
img/: icon_v2.icns  icon_v2_bw.icns  mt-downloader.asciinema
mt_downloader-1.2.7/: LICENSE  PKG-INFO  pyproject.toml
mt_downloader-1.2.7/src/map_tiles_downloader/: cli.py  kml_regions.py  regions.py  tiling.py
mt_downloader-1.2.7/tests/: test_cli.py  test_providers.py  test_tiling.py
src/map_tiles_downloader/: __init__.py  cli.py  downloader.py  kml_regions.py  providers.py  regions.py  tiling.py  tui.py
tests/: test_cli.py  test_downloader.py  test_integration.py  test_kml_regions.py  test_regions.py  test_tiling.py  test_tui_menu.py  test_version.py
