[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map-tiles-downloader"
version = "0.1.1"
description = "Download Thunderforest map tiles by bounding box or KML."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Map Tiles Downloader Maintainers" }
]
keywords = ["maps", "tiles", "thunderforest", "kml", "downloader"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
]
dependencies = [
  "aiohttp>=3.9",
  "tqdm>=4.65",
  "fastkml>=0.12",
  "aiofiles>=23.1",
  "questionary>=2.0",
  "lxml>=5.0",
  "geonamescache>=2.0",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

[project.scripts]
mtd = "map_tiles_downloader.cli:main"
map-tiles-downloader = "map_tiles_downloader.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

