[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt-downloader"
version = "1.2.7"
description = "Fast interactive Meshtastic and MeshCore maps downloader"
readme = "README.md"
requires-python = ">=3.9"
license = "CC-BY-4.0"
authors = [
  { name = "Peter Javorsky, @tekk" }
]
keywords = ["maps", "tiles", "meshtastic", "meshcore", "downloader"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
]
dependencies = [
  "aiohttp>=3.9",
  "tqdm>=4.65",
  "fastkml>=0.12",
  "aiofiles>=23.1",
  "questionary>=2.0",
  "lxml>=5.0",
  "geonamescache>=2.0",
]

[project.urls]
Homepage = "https://github.com/tekk/map-tiles-downloader"
Repository = "https://github.com/tekk/map-tiles-downloader.git"

[project.scripts]
mt-downloader = "map_tiles_downloader.cli:main"
map-tiles-downloader = "map_tiles_downloader.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501", "I001"]
